style(footer): fix phone numbers not showing up on dark background

--- a/src/components/Layout/Footer/Footer.module.scss
+++ b/src/components/Layout/Footer/Footer.module.scss
@@ -58,6 +58,7 @@
         }
         span {
           align-self: self-end;
+          color: $primary-background;
         }
       }
     }
@@ -107,5 +108,9 @@
       justify-content: space-between;
       width: 100%;
     }
+  }
+
+  a[href^='tel'] {
+    color: $primary-background;
   }
 }
